fix main menu flicker on page load

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -10,6 +10,10 @@ body {
   font-weight: 400;
 }
 
+[ng-cloak] {
+  display: none !important;
+}
+
 .left {
   float: left;
 }
